# sdk

./: .gitignore  README.md
mcp/: .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
mcp/.claude-plugin/: plugin.json
mcp/skills/agentvisa/: SKILL.md
mcp/src/: index.ts
middleware/: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
middleware/agentvisa_fastapi/: __init__.py  client.py  config.py  dependencies.py  middleware.py  models.py
verify/: .gitignore  README.md  package-lock.json  package.json
verify/src/: index.ts  middleware.ts  types.ts  verify.ts
widget/: .gitignore  CONTRIBUTING.md  LICENSE  PUBLISH_CHECKLIST.md  README.md  SECURITY.md  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsconfig.middleware.json
widget/src/: core.ts  index.ts  types.ts  verify.ts
widget/src/express/: index.ts
widget/src/next/: index.ts
