[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvisa-fastapi"
version = "0.1.1"
description = "FastAPI middleware for AgentVisa AI agent verification"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "AgentVisa", email = "info@agentvisa.ai" }
]
keywords = ["agentvisa", "fastapi", "middleware", "ai-agent", "verification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Security",
]
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://agentvisa.ai"
Repository = "https://github.com/AgentVisa-ai/agentvisa-fastapi"
Documentation = "https://agentvisa.ai/docs"
"Bug Tracker" = "https://github.com/AgentVisa-ai/agentvisa-fastapi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentvisa_fastapi*"]
